フッタのテキスト色修正 / 「当サイトの目的」下線削除

--- a/WebPage/TOMIgnite!/css/tomignite.css
+++ b/WebPage/TOMIgnite!/css/tomignite.css
@@ -129,10 +129,9 @@ div#header-bk {
 }
 
 div#header {
-  height: 100%;/* 縦の表示領域はheader-bkと同じ */
-  width: 100%;         /* 横の幅970px */
-  margin: auto;              /* 中央揃え */
-
+  	height: 100%;/* 縦の表示領域はheader-bkと同じ */
+  	width: 100%;         /* 横の幅970px */
+  	margin: auto;              /* 中央揃え */
 }
 
 /* フッターの固定 */
@@ -147,8 +146,7 @@ div#footer-fixed /*領域のみ*/
 
 div#footer-bk
 {
-  background-color:rgba(0,0,0,0.8); /* 背景色(黒) */
-
+	background-color:rgba(0,0,0,0.8); /* 背景色(黒) */
 	height:30px;              /* 縦の高さ140px */
 	width:100%;                /* 横の幅を100% */
 }
@@ -161,41 +159,39 @@ div#footer {
 
 /* メインボディ定義 */
 div#body-bk{
-  padding: 130px 0 60px 0;    /* 上200px下110px余白を取る */
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
+  	padding: 130px 0 60px 0;    /* 上200px下110px余白を取る */
+  	background-attachment: fixed;
+  	background-position: center;
+  	background-repeat: no-repeat;
 }
 /*idが優先される*/
 div.aboutBackground{
-  background-image: url('../images/backColor.png');
-  background-color: rgba(255,255,255,0.7);
-  background-blend-mode: lighten;
-  background-size: 25%;
+  	background-image: url('../images/backColor.png');
+  	background-color: rgba(255,255,255,0.7);
+  	background-blend-mode: lighten;
+  	background-size: 25%;
 }
 
 .subNavi{
-  font-size:50px;
-  color: #ffffff;
-  font-family:"游明朝","serif";
-  padding-top: 10px;
-  padding-bottom: 10px;
+  	font-size:50px;
+  	color: #ffffff;
+  	font-family:"游明朝","serif";
+  	padding-top: 10px;
+  	padding-bottom: 10px;
 }
 
 nav ul {
-
-  list-style: none;
-  padding-top : 7px;
-  margin: 0 auto;
-  max-width: 800px;
+  	list-style: none;
+  	padding-top : 7px;
+  	margin: 0 auto;
+  	max-width: 800px;
 }
 nav li {
-  box-sizing: border-box;
-  float: left;
-  width: 25%;
+  	box-sizing: border-box;
+  	float: left;
+  	width: 25%;
 }
 nav li a{
-
   display:block;
   width: 100%;
   text-decoration:none;
@@ -206,13 +202,13 @@ nav li a{
 }
 
 nav a:hover{
-  color: #ffffff;
-  opacity: 0.5;
+  	color: #ffffff;
+  	opacity: 0.5;
 }
 
 h1.slider{
-  width:100%;
-  padding: 0;
+  	width:100%;
+  	padding: 0;
 }
 
 h2 {
@@ -220,29 +216,34 @@ h2 {
     margin: 40px 10% 0 ;  /*h2全体の幅調整、下線のため*/
   }
 h2 p{
-  font-size: 40px;
-  font-family:"游明朝","serif";
-　color: rgba(0,0,0,0.75);
-
-  padding: 6px; /*テキストと下線の間隔*/
-  border-bottom: 3px solid rgba(0,0,0,0.75);
+  	font-size: 40px;
+  	font-family:"游明朝","serif";
+	color: rgba(0,0,0,0.75);
+  	padding: 6px; /*テキストと下線の間隔*/
+  	border-bottom: 3px solid rgba(0,0,0,0.75);
 }
 h2 div{
     margin: 2vh 5% 2vh;  /*ハイライトの余白*/
 }
 div.about{
-  margin: 40px 10% 0 ;
+  	margin: 40px 10% 0 ;
 }
 div#body-bk div.aboutContents{
-  font-size: 40px;
-  font-family:"游明朝","serif";
-　color: rgba(0,0,0,0.75);
-  padding: 3vh 0 1vh;
-  border-bottom: 3px solid rgba(0,0,0,0.75);
+  	font-size: 40px;
+  	font-family:"游明朝","serif";
+	color: rgba(0,0,0,0.75);
+  	padding: 3vh 0 1vh;
+  	border-bottom: 3px solid rgba(0,0,0,0.75);
+}
+div#body-bk div.aboutContentsLineLess{
+	font-size: 40px;
+	font-family:"游明朝","serif";
+  color: rgba(0,0,0,0.75);
+	padding: 3vh 0 1vh;
 }
 div#body-bk p.aboutContents{
-  line-height:30px;
-  padding: 3vh 5% 3vh;
+  	line-height:30px;
+  	padding: 3vh 5% 3vh;
 }
 h3 {
     border-bottom: 3px  solid rgba(0,0,0,0.75);
@@ -250,43 +251,40 @@ h3 {
     padding-bottom: 2.5vh;
   }
 h3 p{
-  font-size: 40px;
-  font-family:"游明朝","serif";
-　color: rgba(0,0,0,0.75);
-  padding: 6px; /*テキストと下線の間隔*/
-  margin-bottom: 2.5vh;
-  border-bottom: 3px solid rgba(0,0,0,0.75);
+  	font-size: 40px;
+  	font-family:"游明朝","serif";
+	color: rgba(0,0,0,0.75);
+  	padding: 6px; /*テキストと下線の間隔*/
+  	margin-bottom: 2.5vh;
+  	border-bottom: 3px solid rgba(0,0,0,0.75);
 }
-
 
 h3
 .container {
-  display: flex;
+  	display: flex;
     justify-content: center;
+  	display: grid;
+    grid-template-columns: 0.23fr 0.23fr 0.23fr 0.23fr;
+    gap:10px;
+}
+h3
+.item{
+    background: #444;
+    color: #fff;
+    padding: 10px;
+}
 
-  display: grid;
-      grid-template-columns: 0.23fr 0.23fr 0.23fr 0.23fr;
-      gap:10px;
-
-    }
-    h3
-    .item{
-      background: #444;
-      color: #fff;
-      padding: 10px;
-    }
-
-  h3 a{
+h3 a{
     color:#ffffff;
     font-size: 23px;
-  }
+}
 
-    footer
-    .container{
-      padding: 6px;
-      font-family:"游明朝","serif";
-      color: #ffffff;
-    }
-    footer a{
-    color: #3aacad;
-    }
+footer
+.container{
+    padding: 6px;
+    font-family:"游明朝","serif";
+    color: #ffffff;
+}
+footer a{
+	color: #3aacad;
+}
