--- a/WebPage/TOMIgnite!/sp/css/tomignite.css
+++ b/WebPage/TOMIgnite!/sp/css/tomignite.css
@@ -118,14 +118,14 @@ div#header-fixed
     top: 0px;             /* 位置(上0px) */
     left: 0px;            /* 位置(右0px) */
     width: 100%;          /* 横幅100%　*/
-    height: 110px;        /* 縦幅140px */
+    height: 110px;        /* 縦幅110px */
     z-index:1000;         /* レイヤー高さ1000の位置 */
 }
 
 div#header-bk {
 	background-color:rgba(0,0,0,0.8);     /* 背景色(黒) */
 	padding: 10px 0 0px;       /* 上30px、下0左右０ */
-	height:62px;              /* 黒背景縦の高さ110px */
+	height:62px;              /* 黒背景縦の高さ62px */
 	width:100%;                /* 横の幅を100% */
 }
 
@@ -142,25 +142,25 @@ div#footer-fixed /*領域のみ*/
     bottom: 0px;         /* 位置(下0px) */
     left: 0px;           /* 位置(左0px) */
     width: 100%;         /* 横幅100%　*/
-    height: 30px;       /* 縦幅140px */
+    height: 30px;       /* 縦幅30px */
 }
 
 div#footer-bk
 {
 	background-color:rgba(0,0,0,0.8); /* 背景色(黒) */
-	height:30px;              /* 縦の高さ140px */
+	height:30px;              /* 縦の高さ30px */
 	width:100%;                /* 横の幅を100% */
 }
 
 div#footer {
 	height: 100%;/* 縦の表示領域はheader-bkと同じ */
-	width: 100%;     /* 横の幅970px */
+	width: 100%;     /* 横の幅100% */
 	margin: auto;     /* 中央揃え */
 }
 
-/* ボディの定義 */
+/* ボディ定義 */
 div#body-bk{
-  	padding: 70px 0 60px 0;    /* 上200px下110px余白を取る */
+  	padding: 80px 0 60px 0;    /* 上80px下60px余白を取る */
   	background-attachment: fixed;
   	background-position: center;
   	background-repeat: no-repeat;
