--- a/WebPage/TOMIgnite!/sp/nav/about/about.css
+++ b/WebPage/TOMIgnite!/sp/nav/about/about.css
@@ -167,7 +167,7 @@ div#body-bk{
 }
 /*idが優先される*/
 div.aboutBackground{
-  	background-image: url('../images/backColor.png');
+  	background-image: url('../../images/backColor.png');
   	background-color: rgba(255,255,255,0.7);
   	background-blend-mode: lighten;
   	background-size: 40%;
@@ -235,7 +235,7 @@ div#body-bk div.aboutContents{
   	font-family:"游明朝","serif";
 	color: rgba(0,0,0,0.75);
   	padding: 3vh 0 1vh;
-  	border-bottom: 3px solid rgba(0,0,0,0.75);
+  	border-bottom: 1px solid rgba(0,0,0,0.75);
 }
 div#body-bk div.aboutContentsLineLess{
 	font-size: 23px;
