--- a/WebPage/TOMIgnite!/sp/test_page/testImgCross/css/imageTest.css
+++ b/WebPage/TOMIgnite!/sp/test_page/testImgCross/css/imageTest.css
@@ -102,13 +102,12 @@ hr {
 input, select {
     vertical-align:middle;
 }
-
 /*html5doctor---------------------------------------------------------*/
 
 
 
 body{
-  	width: 100%; height: 100%;
+  width: 100%; height: 100%;
 }
 
 /* ヘッダーの固定 */
@@ -125,12 +124,12 @@ div#header-fixed
 div#header-bk {
 	background-color:rgba(0,0,0,0.8);     /* 背景色(黒) */
 	padding: 10px 0 0px;       /* 上30px、下0左右０ */
-	height:62px;              /* 黒背景縦の高さ62px */
+	height:62px;              /* 黒背景縦の高さ110px */
 	width:100%;                /* 横の幅を100% */
 }
 
 div#header {
-	height: 100%;/* 縦の表示領域はheader-bkと同じ */
+  	height: 100%;/* 縦の表示領域はheader-bkと同じ */
   	width: 100%;         /* 横の幅970px */
   	margin: auto;              /* 中央揃え */
 }
@@ -154,13 +153,13 @@ div#footer-bk
 
 div#footer {
 	height: 100%;/* 縦の表示領域はheader-bkと同じ */
-	width: 100%;     /* 横の幅100% */
+	width: 100%;     /* 横の幅970px */
 	margin: auto;     /* 中央揃え */
 }
 
 /* ボディ定義 */
 div#body-bk{
-  	padding: 80px 0 60px 0;    /* 上80px下60px余白を取る */
+  	padding: 130px 0 60px 0;    /* 上200px下110px余白を取る */
   	background-attachment: fixed;
   	background-position: center;
   	background-repeat: no-repeat;
@@ -174,10 +173,10 @@ div.aboutBackground{
 }
 
 .subNavi{
-  	height:39.25px;
-  	font-size: 4vh;
-  	color: #ffffff;
-  	font-family:"游明朝","serif";
+  height:39.25px;
+  font-size: 4vh;
+  color: #ffffff;
+  font-family:"游明朝","serif";
 }
 
 nav ul {
@@ -192,13 +191,13 @@ nav li {
   	width: 25%;
 }
 nav li a{
-  	display:block;
-  	width: 100%;
-  	text-decoration:none;
-  	text-align: center;
-  	font-family:"游明朝","serif";
-  	color: #ffffff;
-  	font-size: 10px;
+  display:block;
+  width: 100%;
+  text-decoration:none;
+  text-align: center;
+  font-family:"游明朝","serif";
+  color: #ffffff;
+  font-size: 10px;
 }
 
 nav a:hover{
@@ -206,27 +205,10 @@ nav a:hover{
   	opacity: 0.5;
 }
 
-
-h2 {
-    border-bottom: 2px  solid rgba(0,0,0,0.75);
-    margin: 20px 5% 0 ;  /*h2全体の幅調整、下線のため*/
-  }
-h2 p{
-  	font-size: 20px;
-  	font-family:"游明朝","serif";
-	color: rgba(0,0,0,0.75);
-
-  	padding: 6px; /*テキストと下線の間隔*/
-  	border-bottom: 2px solid rgba(0,0,0,0.75);
-}
-h2 div{
-    margin: 1vh 5% 1vh;  /*ハイライトの余白*/
-}
 div.about{
   	margin: 40px 10% 0 ;
 }
-
-div#body-bk div.aboutContents{ 
+div#body-bk div.aboutContents{
   	font-size: 23px;
   	font-family:"游明朝","serif";
 	color: rgba(0,0,0,0.75);
@@ -237,44 +219,6 @@ div#body-bk p.aboutContents{
   	line-height:30px;
   	padding: 3vh 2% 3vh;
 }
-h3 {
-    border-bottom: 2px  solid rgba(0,0,0,0.75);
-    margin: 10px 5% 0px;  /*h2全体の幅調整、下線のため*/
-    padding-bottom: 1.5vh;
-  }
-h3 p{
-  	font-size: 20px;
-  	font-family:"游明朝","serif";
-	color: rgba(0,0,0,0.75);
-  	padding: 6px;
-  	margin-bottom: 1.5vh;
-  	border-bottom: 2px solid rgba(0,0,0,0.75);
-}
-
-
-h3
-.container {
-  	margin: 0 5% 0;
-  	display: flex;
-    justify-content: center;
-
-  	display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap:7px;
-
-
-}
-h3
-.item{
-    background: #444;
-    color: #fff;
-    padding: 5px;
-}
-
-h3 a{
-    color:#ffffff;
-    font-size: 6px;
-}
 
 footer
 .container{
@@ -284,4 +228,41 @@ footer
 }
 footer a{
     color: #3aacad;
+}
+
+/* 回転とイメージマップの演習用CSS */
+.images{
+  margin: 5% auto 2% auto;
+  width: 100%; /* class に幅を選択しないと margin の指定ができない*/
+  text-align: center;
+}
+.icon{
+  display: flex;
+  align-items: center;
+  margin: 25% auto 2% auto;
+  width: 80%;
+}
+
+a{
+  text-decoration: none; /*画像にリンクを埋め込む際の余計な下線を消す*/
+}
+#icon{
+  width: 7%;
+  margin-right: 1%;
+  vertical-align: -50%;
+  animation: 15s linear infinite rotation;
+}
+@keyframes  rotation{
+  0%{ transform:rotate(0); }
+  100%{ transform:rotate(360deg); }
+}
+img[alt="package"]{
+  width: 30%;
+  margin-right: 3%;
+}
+img[alt="nue"],img[alt="mokotan"]{
+  width: 22%;
+}
+img[alt="mokotan"]{
+  margin-left: -10%; /*ぬえﾁｬﾝに重ねる*/
 }
